<resources>
    <string name="app_name">Didact</string>
    <string name="database_name">Didact</string>

    <!-- error messages -->
    <string name="error_no_network">No network connection</string>
    <string name="error_loading">Loading error </string>

    <!-- content descriptions -->
    <string name="content_desc_cover_image">Book cover image</string>

    <!-- default placeholder texts -->
    <string name="placeholder_title">Untitled</string>
    <string name="placeholder_tagline">Tagline unavailable</string>
    <string name="placeholder_description">No Description</string>
    <string name="placeholder_author">Unknown author</string>
    <string name="placeholder_date">dd/mm/yy</string>
    <string name="placeholder_version">version</string>
    <string name="app_icon">application icon</string>
    <string name="password_hint">Your password goes here</string>
    <string name="login">Log in</string>
    <string name="new_password_hint">New password goes here</string>
    <string name="register">Register</string>
    <string name="welcome_text">Welcome to Didact</string>
    <string name="login_register_separator">or</string>

    <!-- registration-->
    <string name="new_password_repeat_hint">Password</string>
    <string name="new_email_hint">Email</string>
    <string name="register_for_didact_app">Register New Account </string>
    <string name="chapter_thumbnail_image">chapter thumbnail image</string>
    <string name="one">1</string>
    <string name="library_no_content">Nothing to show</string>
    <string name="untitled_section">Untitled section</string>
    <string name="unnumbered_section">---</string>
    <string name="placeholder_answer">Answer</string>
    <string name="placeholder_explanation">Explanation</string>
    <string name="placeholder_question">Question</string>
    <string name="content_illustration">illustration image</string>
    <string name="chapters_no_content">No chapters to show</string>
    <string name="section_no_content">No sections to show</string>
    <string name="library_title">Book Library</string>
    <string name="chapter_title">Chapters</string>
    <string name="section_title">Sections</string>
    <string name="submit">submit</string>
    <string name="section_detail_wrong_answer">Wrong answer</string>
    <string name="section_detail_correct_answer">Correct!</string>

</resources>
