<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_scrollview_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.didactapp.didact.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/screen_edge_margin"
        android:layout_marginStart="@dimen/screen_edge_margin"
        android:layout_marginTop="?android:actionBarSize"
        android:orientation="vertical">

        <!-- app logo -->
        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/ic_book_logo" />

        <!-- welcome text-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textSize="@dimen/typography_title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText

                android:id="@+id/login_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/new_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- login password field -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- login button -->

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/colorTextPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center"
            android:text="@string/login_register_separator"
            android:textSize="@dimen/typography_title" />

        <!-- register button-->

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@color/colorTextPrimary" />

    </LinearLayout>
</ScrollView>