<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_desc_cover_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_book" />

    <TextView
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/layout_grid_divider"
        android:text="@string/placeholder_title"
        android:textColor="@color/colorTextSecondary" />

    <TextView
        android:id="@+id/book_tagline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|bottom"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="@dimen/layout_content_divider"
        android:text="@string/placeholder_tagline"
        android:paddingTop="@dimen/layout_grid_divider"
        android:textSize="@dimen/typography_body2" />


</LinearLayout>